[package]
name = "imgdiff"
version = "0.1.0"
authors = ["noelzubin <noelzubinvictor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "imgdiff"
path = "src/lib.rs"

[[bin]]
name = "imgdiff"
path = "src/main.rs"

[dependencies]
image = "0.23.12"
structopt = "0.3"
lab = "0.8.2"